// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SideBar /> renders no sideBar 1`] = `
<div>
  <div
    class=""
  >
    <div
      class=""
    >
      <nav>
        <svg
          class=""
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </g>
        </svg>
      </nav>
      <div>
        <a
          aria-current="page"
          class="function link() { [native code] } active"
          href="/"
        >
          <span>
            Home
          </span>
        </a>
        <a
          aria-current="page"
          class="function link() { [native code] } active"
          href="/"
        >
          <span>
            Test
          </span>
        </a>
        <hr />
        <a
          aria-current="page"
          class="function link() { [native code] } active"
          href="/"
        >
          <span>
            Settings
          </span>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SideBar /> renders sideBar 1`] = `
<div>
  <div
    class="undefined"
  >
    <div
      class="undefined"
    >
      <nav>
        <svg
          class=""
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </g>
        </svg>
      </nav>
      <div>
        <a
          aria-current="page"
          class="function link() { [native code] } active"
          href="/"
        >
          <span>
            Home
          </span>
        </a>
        <a
          aria-current="page"
          class="function link() { [native code] } active"
          href="/"
        >
          <span>
            Test
          </span>
        </a>
        <hr />
        <a
          aria-current="page"
          class="function link() { [native code] } active"
          href="/"
        >
          <span>
            Settings
          </span>
        </a>
      </div>
    </div>
  </div>
</div>
`;
